Testing creation des beans